Update website with new changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/images/Portfolio.png" />
+    <link rel="icon" type="image/png" href="/src/assets/images/myp.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Kavindu Suriyawansha - Professional Web Developer Portfolio. Experienced in creating modern, responsive websites and web applications." />
     <meta name="keywords" content="web developer, portfolio, react, typescript, frontend developer, kavindu suriyawansha" />
